<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_bar">KRTT</string>
    <string name="footer_add_bs">문의 : junsun2005@naver.com</string>
    
    
    <string name="menu_bs_list">업체목록</string>
    <string name="menu_bs_outers">Outwears</string>
    <string name="menu_bs_t_shirts">T-Shirts</string>
    <string name="menu_bs_shirts">Shirts</string>
    <string name="menu_bs_sweaters">Sweaters</string>
    <string name="menu_bs_jeans">Jeans</string>
    <string name="menu_bs_pants">Pants</string>
    <string name="menu_bs_etc">ETC</string>
    
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    <string name="krtt_auth_help">※ 인증문자열은 카페 공지게시글 (모바일KRTT 인증법) 참조</string>

</resources>
