<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
        
     <LinearLayout
        android:id="@+id/menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" 
        android:weightSum="1"
        android:background="#dadada"
        android:visibility="gone">
        
        <LinearLayout
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:layout_weight="0.3" 
        	android:background="#202020">
	        
           	<ImageView
				android:layout_marginTop="12dip"
				android:layout_marginLeft="25dip"
				android:layout_marginRight="13dip"
				android:layout_marginBottom="12dip"
		        android:layout_width="50dip"
		        android:layout_height="25dip"
		        android:background="@drawable/ic_logo">
		    </ImageView>
		    
           	<View
		        android:layout_width="fill_parent"
		        android:layout_height="2dip"
		        android:background="@layout/menu_item_horizontal_r_shadow" >
		    </View>
		    
       	 	<View
	            android:layout_marginBottom="1dip"
	            android:layout_width="fill_parent"
	            android:layout_height="6dip"
           		android:background="#555" >
		    </View>
            
	        <TextView
	            android:layout_marginBottom="1dip"
	            android:padding="20dip"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
           		android:background="#343434"
	            android:gravity="center_horizontal"
	            android:text="@string/menu_bs_list"
	            android:textSize="14sp" />
	        
	        <TextView
	            android:layout_marginBottom="1dip"
	            android:padding="20dip"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
           		android:background="#343434"
	            android:gravity="center_horizontal"
	            android:text="@string/menu_bs_outers"
	            android:textSize="14sp" />
	
	        <TextView
	            android:layout_marginBottom="1dip"
	            android:padding="20dip"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
           		android:background="#343434"
	            android:gravity="center_horizontal"
	            android:text="@string/menu_bs_t_shirts"
	            android:textSize="14sp" />
	
	        <TextView
	            android:layout_marginBottom="1dip"
	            android:padding="20dip"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
           		android:background="#343434"
	            android:gravity="center_horizontal"
	            android:text="@string/menu_bs_shirts"
	            android:textSize="14sp"  />
	        
	        <TextView
	            android:layout_marginBottom="1dip"
	            android:padding="20dip"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
           		android:background="#343434"
	            android:gravity="center_horizontal"
	            android:text="@string/menu_bs_sweaters"
	            android:textSize="14sp"  />
	
	        <TextView
	            android:layout_marginBottom="1dip"
	            android:padding="20dip"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
           		android:background="#343434"
	            android:gravity="center_horizontal"
	            android:text="@string/menu_bs_pants"
	            android:textSize="14sp"  />
	        
	        <TextView
	            android:layout_marginBottom="1dip"
	            android:padding="20dip"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
           		android:background="#343434"
	            android:gravity="center_horizontal"
	            android:text="@string/menu_bs_jeans"
	            android:textSize="14sp"  />
	        
	        <TextView
	            android:padding="20dip"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
           		android:background="#343434"
	            android:gravity="center_horizontal"
	            android:text="@string/menu_bs_etc"
	            android:textSize="14sp" />
	        
			<View
		        android:layout_width="fill_parent"
		        android:layout_height="2dip"
		        android:background="@layout/menu_item_horizontal_shadow" >
		    </View>
	    
        </LinearLayout>
    </LinearLayout>
    
    
	<LinearLayout
	    android:id="@+id/app"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" 
	    android:background="#dadada">
	
	    <RelativeLayout 
			android:layout_width="fill_parent"
			android:layout_height="50dip"
			android:background="#343434" >
	       
			<ImageButton
            	android:id="@+id/BtnSlide"
				android:layout_width="30dip"
				android:layout_height="30dip"	
				android:padding="30dip"
				android:layout_marginLeft="15dip"
			    android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
				android:background="@drawable/ic_menu" 
        		android:visibility="gone">  
			</ImageButton>
			
			<View
		        android:layout_width="2dip"
		        android:layout_height="fill_parent"
		        android:layout_marginLeft="60dip"
		        android:background="@layout/listview_item_vertical_shadow" 
        		android:visibility="gone">
		    </View>
			
	        <TextView
	            android:layout_centerVertical="true"
	            android:layout_centerHorizontal="true"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/title_bar"
	            android:textColor="#FFFFFF"
	            android:textStyle="bold" 
	            android:textSize="15dip" >
	        </TextView>
	    </RelativeLayout>
	    
	    <View
	        android:layout_width="fill_parent"
	        android:layout_height="3dip"
	        android:background="@layout/listview_item_horizontal_shadow" >
	    </View>
	    
	    
	    <ListView
	        android:layout_marginRight="10dip"
	        android:layout_marginLeft="10dip"
	        android:id="@+id/listView1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" 
	        android:divider="#dadada"
	   		android:dividerHeight="3px"
     		android:scrollbars="none"
    		android:listSelector="@layout/listview_item_selector"
    		android:background="@color/white"
     		android:visibility="invisible">
	    </ListView>
	    
	</LinearLayout>
	
</FrameLayout>

    
